# JoshMaths

./: .gitignore  .gitmodules  CMakeLists.txt  GenCodeBlocks(MinGW)DevEnv.bat  GenVs2013DevEnv.bat  GenVs2015DevEnv.bat  GenVs2022DevEnv.bat  Josh Maths.sln  README.md  RunUnitTestsViaCTest.bat  TODO.md
.github/workflows/: cmake-single-platform.yml
Debug/: Josh Maths.ilk  Josh Maths.lib  JoshMaths.lib  JoshMathsUnitTest.exp  JoshMathsUnitTest.ilk  JoshMathsUnitTest.lib
Josh Maths/: Josh Maths.vcxproj  Josh Maths.vcxproj.filters  JoshMath.cpp  JoshMath.h  Math.cpp  Math.h  MathTypes.h
Josh Maths/Debug/: CL.read.1.tlog  CL.write.1.tlog  Josh Maths.lastbuildstate  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc110.idb  vc120.idb  vc140.idb
Josh Maths/Debug/Josh Maths.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Josh Maths.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  lib.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Josh Maths/Debug/JoshMaths.tlog/: CL.read.1.tlog  CL.write.1.tlog  JoshMaths.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Josh Maths/Release/Josh Maths.tlog/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
Josh Maths/Release/JoshMaths.tlog/: CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
JoshMath/: CMakeLists.txt  ConversionFunctions.cpp  ConversionFunctions.h  InterpolationFunctions.cpp  InterpolationFunctions.h  JoshMath.cpp  JoshMath.h  Math.cpp  Math.h  MathTypes.h  MatrixMath.cpp  MatrixMath.h  MiscellaneousFunctions.cpp  MiscellaneousFunctions.h  PhysicsSolvers.cpp  PhysicsSolvers.h  PlaneMath.cpp  PlaneMath.h  QuaternionMath.cpp  QuaternionMath.h  TransformationMath.cpp  TransformationMath.h  VectorMath.cpp  VectorMath.h  VolumeIntersectionMaths.cpp  VolumeIntersectionMaths.h  main.cpp
JoshMathsUnitTest/: InterpolationMathTests.cpp  JoshMathsUnitTest.vcxproj  JoshMathsUnitTest.vcxproj.filters  MatrixMathTests.cpp  PhysicsTests.cpp  VectorMathTests.cpp  VolumeIntersectionTests.cpp  stdafx.cpp  unittest1.cpp
JoshMathsUnitTest/Debug/: JoshMathsUnitTest.vcxprojResolveAssemblyReference.cache  vc120.idb
JoshMathsUnitTest/Debug/JoshMath.6A70BFB7.tlog/: CL.read.1.tlog  CL.write.1.tlog  JoshMathsUnitTest.lastbuildstate  JoshMathsUnitTest.write.1u.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
MakeDevEnvScripts/: GenVs2022DevEnv.bat
Release/: Josh Maths.lib  JoshMaths.lib  JoshMathsUnitTest.exp  JoshMathsUnitTest.lib
Submodule/: CMakeLists.txt
UnitTests/: CMakeLists.txt  ConvertionTest.cpp  InterpolationTest.cpp  MatrixMathTest.cpp  MiscTest.cpp  PlaneMathTests.cpp  TransformTest.cpp  VectorMathTest.cpp  VolumeInsersection.cpp  main.cpp
ext/gtest/: CMakeLists.txt
test/: main.cpp
(+8 files in other folders)
